tests/valid/arrays/uninitialized.rs
/*
executionExitCode: 0
*/

main(): i32{
    a: [i32, 10];
    return 0;
}