tests/invalid/arrays/no_size_in_declaration.rs
/*
compilationExitCode: 3
*/

main(): i32{
    a: [i32];
    return 0;
}